--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "fx-cli": "./bin/fx-cli.js"
   },
   "scripts": {
-    "start": "node ./bin/fx-cli.js",
+    "start": "node bin/fx-cli.js",
     "test": "jest",
-    "build": "echo '构建完成'",
-    "lint": "eslint ."
+    "build": "npm run lint && npm run test",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "pack": "npm pack",
+    "publish:local": "npm install -g .",
+    "publish:npm": "npm publish",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major"
   },
   "keywords": [
     "fxiaoke",
@@ -41,5 +48,22 @@
   },
   "engines": {
     "node": ">=14.0.0"
-  }
+  },
+  "files": [
+    "bin/",
+    "src/",
+    "docs/",
+    "templates/",
+    "README.md",
+    "CHANGELOG.md",
+    "LICENSE"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fxiaoke/fx-cli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fxiaoke/fx-cli/issues"
+  },
+  "homepage": "https://github.com/fxiaoke/fx-cli#readme"
 }
